--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Aprendendo Formulários</title>
   <style>
     body {
+      background-color: rgba(197, 84, 8, 0.247);
       font-family: Arial, sans-serif;
       background-color: #f4f4f9;
       margin: 0;
