--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
   <title>Aprendendo Formulários</title>
   <style>
     body {
-      background-color: rgba(228, 100, 14, 0.247);
       font-family: Arial, sans-serif;
-      background-color: #f4f4f9;
+      background-color: #e1640b83;
       margin: 0;
       padding: 0;
       display: flex;
