--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <style>
     body {
       font-family: Arial, sans-serif;
-      background-color: #e1640b83;
+      background-color: #0b4be1;
       margin: 0;
       padding: 0;
       display: flex;
