--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     }
     .container {
       background-color: #ffffff;
-      padding: 20px;
+      padding: 25px;
       border-radius: 8px;
       box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
       width: 45%;
@@ -32,7 +32,8 @@
       color: #555;
     }
     input, button {
-      width: 100%;
+      background-color: #d9e0d9;
+      width: 95%;
       padding: 10px;
       margin-top: 8px;
       border-radius: 5px;
@@ -44,8 +45,9 @@
       cursor: pointer;
       transition: background-color 0.3s ease;
     }
-    button:hover {
-      background-color: #45a049;
+    input:hover {
+      background-color: #ffffff;
+
     }
     .explanation {
       font-size: 12px;
@@ -113,10 +115,10 @@
 
       <label>4. Qual sua opção preferida?</label>
       <div>
-        <label>
+        <label class="bolinha">
           <input type="radio" name="preferencia" value="opcao1"> Opção 1
         </label>
-        <label>
+        <label class="bolinha">
           <input type="radio" name="preferencia" value="opcao2"> Opção 2
         </label>
       </div>
